# insight-worker

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
insight_worker/: __init__.py  cli.py  message.py  minio.py  models.py  opensearch.py  pdf.py  rag.py  tasks.py  worker.py
tests/: test_message.py  test_minio.py  test_opensearch.py  test_pdf.py  test_worker.py
worker/: Dockerfile  Makefile  README.md  pyproject.toml
worker/insight_worker/: __init__.py  cli.py  delete.py  ingest.py  ingestors.py  models.py  oauth.py  opensearch.py  plugin.py  rag.py  storage.py  tasks.py  vectorstore.py
worker/tests/: test_embedding.py
worker/worker/: __init__.py
