[tool.poetry]
name = "insight-worker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.12,<3.13"
click = "^8.1.7"
pikepdf = "^8.6.0"
ocrmypdf = "^16.0.0"
pgvector = "^0.2.3"
minio = "^7.2.0"
pymupdf = "^1.23.20"
pika = "^1.3.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
watchdog = "^4.0.1"
python-magic = "^0.4.27"
tiktoken = "^0.8.0"

[tool.poetry.scripts]
insight-worker = "insight_worker.cli:cli"

[tool.poetry.group.dev.dependencies]
sqlacodegen = {extras = ["pgvector"], version = "^3.0.0rc5", allow-prereleases = true}
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
