[project]
name = "insight-worker"
version = "0.3.14"
description = ""
authors = [{ name = "Johan Schuijt", email = "johan@resolve.works" }]
requires-python = ">=3.10.12,<3.14"
readme = "README.md"
dependencies = [
    "click>=8.1.7,<9",
    "pikepdf>=8.6.0,<9",
    "ocrmypdf>=16.0.0,<17",
    "pgvector>=0.2.3,<0.3",
    "minio>=7.2.0,<8",
    "pika>=1.3.2,<2",
    "sqlalchemy[asyncio]>=2.0.27,<3",
    "psycopg2-binary>=2.9.9,<3",
    "asyncpg>=0.30.0,<0.31",
    "httpx>=0.27.0,<0.28",
    "watchdog>=4.0.1,<5",
    "python-magic>=0.4.27,<0.5",
    "tiktoken>=0.8.0,<0.9",
    "pdfminer-six>=20240706,<20240707",
]

[project.scripts]
insight-worker = "insight_worker.cli:cli"

[dependency-groups]
dev = [
    "sqlacodegen[pgvector]>=3.0.0rc5,<4",
    "pytest>=8.0.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
