[tool.poetry]
name = "insight-worker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
asyncio = "^3.4.3"
click = "^8.1.7"
pikepdf = "^8.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
watchdog = "^3.0.0"
ocrmypdf = "^15.4.0"
requests = "^2.31.0"
llama-index = "^0.8.69.post1"
pgvector = "^0.2.3"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
minio = "^7.2.0"

[tool.poetry.scripts]
insight-worker = "insight_worker:cli"

[tool.poetry.group.dev.dependencies]
sqlacodegen = {version = "^3.0.0rc3", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
