[tool.poetry]
name = "insight-worker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.7"
pikepdf = "^8.6.0"
watchdog = "^3.0.0"
ocrmypdf = "^16.0.0"
llama-index = "^0.9.40"
pgvector = "^0.2.3"
minio = "^7.2.0"
requests-oauthlib = "^1.3.1"
pymupdf = "^1.23.20"
pika = "^1.3.2"

[tool.poetry.scripts]
insight-worker = "insight_worker:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
